--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
 #ip-hub {
     height: 100%;
 }
+#ip-hub #ip-hub-content { padding: 0;margin: 0;overflow-x: visible !important;}
+#logo-div {
+    position: absolute;
+    width: 50px;
+    margin-left: 20px;
+    padding: 0 10px;
+}
+#logo-img {
+    width: 100%;
+    height: 100%;
+}
