Color and styling changes to enable live preview

--- a/css/af.ui.base.css
+++ b/css/af.ui.base.css
@@ -1,5 +1,6 @@
 /*src/main.css*/
-/**********************************************************
+
+/**********************************************************
 	GENERAL UI ELEMENTS
 **********************************************************/
 
@@ -566,8 +567,10 @@ body {
 	#afui .menuButton { display:none;	}
 }
 
-/*src/appframework.css*/
-/* blue #0190d6
+
+/*src/appframework.css*/
+
+/* blue #0190d6
 
  */
 
@@ -576,12 +579,12 @@ body {
     color:#53575E;
 }
 
-
+/*
 #afui > #header{
     background:#0088D1;
     border:none;
     border-bottom:1px solid #0088D1;
- }
+ }*/
 
 #afui  #header h1 {
     text-shadow:none;
@@ -880,8 +883,10 @@ body {
 }
 
 
-/*src/lists.css*/
-#afui .list {
+
+/*src/lists.css*/
+
+#afui .list {
   margin: 0px;
   padding: 0px;
   margin-bottom: 10px;
@@ -958,8 +963,10 @@ body {
   border-bottom: none;
 }
 
-/*src/forms.css*/
-#afui select,
+
+/*src/forms.css*/
+
+#afui select,
 #afui textarea,
 #afui input[type="text"],
 #afui input[type=search],
@@ -1188,8 +1195,10 @@ body {
   margin: 16px 0 8px;
 }
 
-/*src/buttons.css*/
-#afui .button {
+
+/*src/buttons.css*/
+
+#afui .button {
 	position:relative;
 	display:inline-block;
 	padding:8px 12px;
@@ -1357,8 +1366,10 @@ body {
 
 
 
-/*src/badges.css*/
-#afui .af-badge {
+
+/*src/badges.css*/
+
+#afui .af-badge {
 	position:absolute;
 	top:2px; right:2px;
 	display:inline-block;
@@ -1382,7 +1393,8 @@ body {
 #afui .af-badge.tl { top:2px; left:2px; right:auto; bottom:auto; }
 
 
-/*src/grid.css*/
+
+/*src/grid.css*/
 
 #afui .grid {
   width: 100%;
@@ -1418,8 +1430,10 @@ body {
   }
 }
 
-/*../plugins/css/af.actionsheet.css*/
-#af_actionsheet {
+
+/*../plugins/css/af.actionsheet.css*/
+
+#af_actionsheet {
     position:absolute;
     left:0px;
     right:0px;
@@ -1478,7 +1492,8 @@ body {
      background-color:rgba(255,0,0,1); 
 }
 
-/*../plugins/css/af.popup.css*/
+
+/*../plugins/css/af.popup.css*/
 
 
 BODY>DIV#mask{
@@ -1560,8 +1575,10 @@ color:inherit;
     margin:8px;
 }
 
-/*../plugins/css/af.scroller.css*/
-/** This can be your default scrollbar class.  You must use !important to override the default inline styles */
+
+/*../plugins/css/af.scroller.css*/
+
+/** This can be your default scrollbar class.  You must use !important to override the default inline styles */
 .scrollBar { 
    position:absolute !important;
    width:5px !important;
@@ -1572,8 +1589,10 @@ color:inherit;
    opacity:0 !important;
 }
 
-/*../plugins/css/af.selectbox.css*/
-	#afSelectBoxContainer {
+
+/*../plugins/css/af.selectbox.css*/
+
+	#afSelectBoxContainer {
 		position:absolute;
 		display:block;
 		width:90%;
@@ -1658,4 +1677,4 @@ color:inherit;
 		color:black;
 	}
 
-
+
