--- a/css/custom.css
+++ b/css/custom.css
@@ -1,31 +1,32 @@
-.wpc-hub-title, .wpc-post-title , .wpc-post-subtitle {
-    color:#3C3C3C;
-}
+/* theme_color_a */
+.ip-theme-bg-color-a { background-color: #ED1C24; }
+.ip-theme-font-color-a { color: #ED1C24; }
+.ip-theme-border-color-a {border-color: #ED1C24; }
 
-.wpc-hub-title {
-}
+/* theme_color_b */
+.ip-theme-bg-color-b { }
+.ip-theme-font-color-b { }
+.ip-theme-border-color-b { }
 
-.wpc-post-div {
-}
-
-.wpc-post {
-    padding: 15px;
-}
-
-#afui > #header {
+/* header_a_color ?? */
+.ip-header {
     border-top: solid 1px #FF1922;
     border-bottom: solid 1px #FF1922;
     background-color: #ED1C24;
 
 }
+#afui a {
+    color: #ED1C24;
+}
+/* header_font_color ?? white or black?? */
 
+
+    
+/* menu_color */
 #afui #menu .list li, #afui #menu .list .divider, #afui #menu .list li:last-child {
-border-color: #5C5C5C;
+    border-color: #5C5C5C;
 }
 
-#afui  {
-    background-color: #ED1C24;
-}
 #afui > #menu.tabletMenu {
     color: white;
     background: #454545;
@@ -43,18 +44,4 @@ border-color: #5C5C5C;
 }
 
 
-#afui #navbar a {
- 
-}
- #afui #navbar a.pressed {
-    border-radius:0;    
-    background:#5C5C5C;
- }
 
-.wpc-hub-div:first-child {
-    background-color: #454545;
- }
-
-.wpc-hub-div:first-child h1, .wpc-hub-div:first-child h2, .wpc-hub-div:first-child h3, .wpc-hub-div:first-child h4, .wpc-hub-div:first-child p {
-    color: #fff !important;
- }
