--- a/css/custom_light.css
+++ b/css/custom_light.css
@@ -1,7 +1,7 @@
 /* theme_color_a */
-.ip-theme-bg-color-a { background-color: #3399CC; }
-.ip-theme-font-color-a { color: #3399CC; }
-.ip-theme-border-color-a {border-color: #3399CC; }
+.ip-theme-bg-color-a { background-color: #666; }
+.ip-theme-font-color-a { color: #666; }
+.ip-theme-border-color-a {border-color: #666; }
 
 /* theme_color_b */
 .ip-theme-bg-color-b { }
@@ -10,26 +10,17 @@
 
 /* header_a_color ?? */
 .ip-header {
-    border-top: solid 1px #3399CC;
-    border-bottom: solid 1px #3399CC;
-    background-color: #3399CC;
+    border-top: solid 1px #666;
+    border-bottom: solid 1px #666;
+    background-color: #666;
 
 }
 #afui a {
-    color: #666;
+    color: #3399CC;
 }
 /* header_font_color ?? white or black?? */
-#afui #header h1{color:#000}
 
-/*Content background color*/
-#afui #content, #afui .panel {
-    background-color: orange;
-}
 
-#afui .panel {
-    padding: 0;
-    margin: 0;
-}
     
 /* menu_color */
 #afui #menu .list li, #afui #menu .list .divider, #afui #menu .list li:last-child {
@@ -42,10 +33,20 @@
     border-right: 1px solid #5C5C5C;
 }
 
+#afui #content {
+    background-color: #fff;
+}
+
+#afui .panel {
+    background-color: #fff;
+    padding: 0;
+    margin: 0;
+}
+
 
     
 /* bgColor */
 .ip-bg-color { background-color: #fff; }
 /* fontColor */
-.ip-bg{}
+ip-bg{}
 
