update with options.js set to ideanotion.net

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,7 +23,7 @@
 
 /*Content background color*/
 #afui #content, #afui .panel {
-    background-color: orange;
+    background-color: #fff;
 }
 
 #afui .panel {
