--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,7 @@
     border-radius:0;    
     background:#5C5C5C;
  }
+
 #ip-hub.panel
 {
 	background-image: url('../img/ajax-loader.gif')!important;
@@ -41,8 +42,15 @@
 	background-position:50% 5%; 
 }
 
+#bookmarkButton {
+    background-image: url('../img/bookmark.png');    
+}
+
+#unbookmarkButton {
+    background-image: url('../img/bookmarked.png');    
+}
+
 .bookmarkButton {
-    background-image: url('../img/bookmark.png');
     display: inline-block;    
     height: 20px;
     width: 20px;
